janusgraph/backup/cassandra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cassandra
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/jce-network: "true"
        io.kompose.service: cassandra
    spec:
      containers:
      - image: cassandra:3
        imagePullPolicy: ""
        name: jce-cassandra
        ports:
        - containerPort: 9042
        - containerPort: 9160
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
