janusgraph/backup/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/jce-network: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms512m -Xmx512m
        - name: cluster.name
          value: docker-cluster
        - name: discovery.zen.minimum_master_nodes
          value: "1"
        - name: http.host
          value: 0.0.0.0
        - name: network.host
          value: 0.0.0.0
        - name: transport.host
          value: 127.0.0.1
        - name: xpack.security.enabled
          value: "false"
        image: docker.elastic.co/elasticsearch/elasticsearch:6.6.0
        imagePullPolicy: ""
        name: jce-elastic
        ports:
        - containerPort: 9200
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
