janusgraph/backup/janusgraph-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: janusgraph
  name: janusgraph
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: janusgraph
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/jce-network: "true"
        io.kompose.service: janusgraph
    spec:
      containers:
      - env:
        - name: JANUS_PROPS_TEMPLATE
          value: cassandra-es
        - name: janusgraph.index.search.hostname
          value: jce-elastic
        - name: janusgraph.storage.backend
          value: cql
        - name: janusgraph.storage.hostname
          value: jce-cassandra
        image: docker.io/janusgraph/janusgraph:latest
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - bin/gremlin.sh
            - -e
            - scripts/remote-connect.groovy
          failureThreshold: 3
          periodSeconds: 10
          timeoutSeconds: 30
        name: jce-janusgraph
        ports:
        - containerPort: 8182
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
