janusgraph/backup/janusgraph-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: janusgraph
  name: janusgraph
spec:
  ports:
  - name: "8182"
    port: 8182
    targetPort: 8182
  selector:
    io.kompose.service: janusgraph
status:
  loadBalancer: {}
