janusgraph/backup/jce-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jce-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/jce-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jce-network: "true"
